docs/references/1.3.x/models/attributeRelationship.md
# AttributeRelationship

AttributeRelationship

## Properties

| Name | Type | Description |
|------|------|-------------|
| key | string | Attribute Key. |
| type | string | Attribute type. |
| status | string | Attribute status. Possible values: `available`, `processing`, `deleting`, `stuck`, or `failed` |
| required | boolean | Is attribute required? |
| array | boolean | Is attribute an array? |
| relatedCollection | string | The ID of the related collection. |
| relationType | string | The type of the relationship. |
| twoWay | boolean | Is the relationship two-way? |
| twoWayKey | string | The key of the two-way relationship. |
| onDelete | string | How deleting the parent document will propagate to child documents. |
| side | string | Whether this is the parent or child side of the relationship |

## Example

### REST

```json
{}
```

### GraphQL

```json
{}
```

